--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "arielmejiadev/larapex-charts": "*",
         "barryvdh/laravel-dompdf": "^2.0",
         "bensampo/laravel-enum": "^6.2",
         "coderello/laravel-shared-data": "^4.0",
-        "consoletvs/charts": "6.*",
         "fruitcake/laravel-cors": "^3.0",
         "geo-sot/laravel-env-editor": "^2.1",
         "guzzlehttp/guzzle": "^7.0.1",
