--- a/composer.json
+++ b/composer.json
@@ -12,24 +12,20 @@
         "arielmejiadev/larapex-charts": "*",
         "barryvdh/laravel-dompdf": "^2.0",
         "bensampo/laravel-enum": "^6.2",
-        "coderello/laravel-shared-data": "^4.0",
-        "fruitcake/laravel-cors": "^3.0",
-        "geo-sot/laravel-env-editor": "^2.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "hammerstone/fast-paginate": "^0.1.10",
         "ifsnop/mysqldump-php": "^2.12",
         "izniburak/laravel-auto-routes": "1.6.0",
         "kirschbaum-development/eloquent-power-joins": "^2.6",
         "kyslik/column-sortable": "^6.4",
-        "laravel/framework": "^9.0",
-        "laravel/sanctum": "^3.1",
-        "laravel/telescope": "^4.10",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "^3.3",
+        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.4",
+        "laravel/ui": "^4.5",
         "league/flysystem-webdav": "^3.21",
         "livewire/livewire": "^3.0",
         "mehradsadeghi/laravel-filter-querystring": "^1.1",
-        "milon/barcode": "^9.0",
         "opcodesio/log-viewer": "^3.1",
         "sabre/dav": "^4.6",
         "spatie/laravel-backup": "^8.2",
@@ -67,7 +63,9 @@
             "Plugins\\": "plugins/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
+            "GeoSot\\EnvEditor\\": "plugins/geo-sot/env-editor/src/",
             "Alkhachatryan\\LaravelWebConsole\\": "plugins/alkhachatryan/laravel-web-console/src/",
+            "Coderello\\SharedData\\": "plugins/coderello/shared-data/src/",
             "ProtoneMedia\\LaravelFormComponents\\": "plugins/protonemedia/laravel-form-components/src/"
         },
         "files": [
