--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "arielmejiadev/larapex-charts": "*",
         "barryvdh/laravel-dompdf": "^2.0",
         "bensampo/laravel-enum": "^6.2",
+        "fruitcake/php-cors": "^1.3",
         "guzzlehttp/guzzle": "^7.0.1",
         "hammerstone/fast-paginate": "^0.1.10",
         "ifsnop/mysqldump-php": "^2.12",
