--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,12 @@
         "beyondcode/laravel-query-detector": "^1.6",
         "dietercoopman/laravel-showsql": "^1.3",
         "fzaninotto/faker": "^1.9.1",
-        "spatie/laravel-mail-preview": "^6.0",
         "kitloong/laravel-migrations-generator": "^6.5",
         "mockery/mockery": "^1.3.1",
         "orangehill/iseed": "^3.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "spatie/laravel-mail-preview": "^6.0",
+        "symfony/var-dumper": "^6.4"
     },
     "config": {
         "optimize-autoloader": true,
