update env file

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_WEBHOOK_SECRET=
+GITHUB_WEBHOOK_BRANCH=master
+
+TELESCOPE_ENABLED=0
+DEBUGBAR_ENABLED=0
+BREADCRUMB_ENABLED=false
