--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^4.5",
         "league/flysystem-webdav": "^3.21",
         "livewire/livewire": "^3.0",
         "mehradsadeghi/laravel-filter-querystring": "^1.1",
@@ -42,6 +41,7 @@
         "dietercoopman/laravel-showsql": "^1.3",
         "fzaninotto/faker": "^1.9.1",
         "kitloong/laravel-migrations-generator": "^6.5",
+        "laravel/ui": "^4.5",
         "mockery/mockery": "^1.3.1",
         "orangehill/iseed": "^3.0",
         "phpunit/phpunit": "^9.3",
@@ -70,6 +70,7 @@
             "GeoSot\\EnvEditor\\": "plugins/geo-sot/env-editor/src/",
             "Alkhachatryan\\LaravelWebConsole\\": "plugins/alkhachatryan/laravel-web-console/src/",
             "Coderello\\SharedData\\": "plugins/coderello/shared-data/src/",
+            "Ibex\\CrudGenerator\\": "plugins/ibex/crud-generator/src/",
             "ProtoneMedia\\LaravelFormComponents\\": "plugins/protonemedia/laravel-form-components/src/"
         },
         "files": [
