--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^5.0.0",
         "@hotwired/turbo": "^7.1.0",
+        "@popperjs/core": "^2.11.6",
         "autoprefixer": "^9.8.8",
         "axios": "^0.19",
         "bootstrap": "^4.3.1",
@@ -25,7 +26,7 @@
         "postcss": "^7.0.39",
         "pusher-js": "^7.0.3",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.56.1",
         "sass-loader": "^7.1.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
         "vue": "^2.5.17",
