--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "sabre/dav": "^4.6",
         "spatie/laravel-backup": "^8.2",
         "spatie/simple-excel": "^3.6",
+        "symfony/process": "^6.4",
         "touhidurabir/laravel-model-sanitize": "^1.1",
         "wildside/userstamps": "^2.2",
         "wnx/laravel-backup-restore": "^1.0"
