update laravel reverb and megaphone

--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,16 @@
         "hammerstone/fast-paginate": "^0.1.10",
         "ifsnop/mysqldump-php": "^2.12",
         "izniburak/laravel-auto-routes": "1.6.0",
+        "jantinnerezo/livewire-alert": "^3.0",
         "kirschbaum-development/eloquent-power-joins": "^2.6",
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^10.0",
+        "laravel/reverb": "^1.1",
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.0",
         "league/flysystem-webdav": "^3.21",
-        "livewire/livewire": "^3.0",
+        "livewire/livewire": "^3.5",
         "mehradsadeghi/laravel-filter-querystring": "^1.1",
         "opcodesio/log-viewer": "^3.1",
         "sabre/dav": "^4.6",
@@ -69,6 +71,7 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "GeoSot\\EnvEditor\\": "plugins/geo-sot/env-editor/src/",
+            "MBarlow\\Megaphone\\": "plugins/m-barlow/megaphone/src/",
             "Alkhachatryan\\LaravelWebConsole\\": "plugins/alkhachatryan/laravel-web-console/src/",
             "Coderello\\SharedData\\": "plugins/coderello/shared-data/src/",
             "Ibex\\CrudGenerator\\": "plugins/ibex/crud-generator/src/",
