--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
+        "vite": "vite",
+        "deploy": "vite build",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production", //pake node versi 16.0.0
+        "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
@@ -17,17 +20,19 @@
         "bootstrap": "^4.3.1",
         "cross-env": "^5.2.1",
         "jquery": "^3.2",
-        "laravel-echo": "^1.11.3",
+        "laravel-echo": "^1.16.1",
         "laravel-mix": "^4.0.7",
         "laravel-mix-purgecss": "^6.0.0",
+        "laravel-vite-plugin": "^1.0.5",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "postcss": "^7.0.35",
-        "pusher-js": "^7.0.3",
+        "pusher-js": "^4.3",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+        "vite": "^5.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.11"
     },
