update env example

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,10 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=reverb
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=database
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
@@ -51,3 +51,15 @@ GITHUB_WEBHOOK_BRANCH=master
 TELESCOPE_ENABLED=0
 DEBUGBAR_ENABLED=0
 BREADCRUMB_ENABLED=false
+
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
