--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "livewire/livewire": "^3.5",
         "mehradsadeghi/laravel-filter-querystring": "^1.1",
         "opcodesio/log-viewer": "^3.1",
+        "phpoffice/phpspreadsheet": "^2.2",
         "sabre/dav": "^4.6",
         "spatie/laravel-backup": "^8.2",
         "spatie/simple-excel": "^3.6",
