--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "gridjs-vue": "^5.0.4"
+        "@imacrayon/alpine-ajax": "^0.8.0",
+        "gridjs-vue": "^5.0.4",
+        "sweetalert2": "^11.12.4"
     }
 }
