--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "dependencies": {
         "@imacrayon/alpine-ajax": "^0.8.0",
+        "alpinejs": "^3.14.1",
         "gridjs-vue": "^5.0.4",
         "sweetalert2": "^11.12.4"
     }
