update clean up

--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,12 @@
         "kirschbaum-development/eloquent-power-joins": "^2.6",
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^10.0",
+        "laravel/pulse": "^1.2",
         "laravel/reverb": "^1.1",
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.0",
+        "laravie/serialize-queries": "^3.0",
         "league/flysystem-webdav": "^3.21",
         "livewire/livewire": "^3.5",
         "mehradsadeghi/laravel-filter-querystring": "^1.1",
