--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     },
     "require-dev": {
         "andreaselia/laravel-api-to-postman": "^1.13",
+        "barryvdh/laravel-ide-helper": "^3.1",
         "beyondcode/laravel-query-detector": "^1.6",
         "dietercoopman/laravel-showsql": "^1.3",
         "fzaninotto/faker": "^1.9.1",
@@ -64,7 +65,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
         }
     },
     "autoload": {
