--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "opcodesio/log-viewer": "^3.1",
         "phpoffice/phpspreadsheet": "^2.2",
         "sabre/dav": "^4.6",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-backup": "^8.2",
         "spatie/simple-excel": "^3.6",
         "symfony/process": "^6.4",
