--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
     "private": true,
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
-        "vite": "vite",
-        "deploy": "vite build",
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "dev": "vite",
+        "prod": "vite build"
     },
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^3.0.0",
