--- a/composer.json
+++ b/composer.json
@@ -51,10 +51,9 @@
         "dietercoopman/laravel-showsql": "^1.3",
         "fzaninotto/faker": "^1.9.1",
         "kitloong/laravel-migrations-generator": "^6.5",
-        "laravel/ui": "^4.5",
+        "laravel/breeze": "*",
         "mockery/mockery": "^1.3.1",
         "orangehill/iseed": "^3.0",
-        "phpunit/phpunit": "^9.3",
         "spatie/laravel-mail-preview": "^6.0"
     },
     "config": {
