--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^3.0.0",
         "@hotwired/turbo": "^7.1.0",
-        "autoprefixer": "^9.8.8",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.19",
         "bootstrap": "^4.3.1",
         "cross-env": "^5.2.1",
@@ -19,12 +21,12 @@
         "laravel-vite-plugin": "^1.0.5",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "postcss": "^7.0.35",
+        "postcss": "^8.4.31",
         "pusher-js": "^4.3",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+        "tailwindcss": "^3.1.0",
         "vite": "^5.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.11"
